test materialize slider

--- a/index.html
+++ b/index.html
@@ -107,11 +107,12 @@
       <!--/desktop carousel-->
       <!--mobile carousel-->
       <div class="carousel carousel-slider" data-indicators="true" id="touch-carousel">
-        <a class="carousel-item" href="pokemon.html"><img src="images/pokemon.PNG" alt="screenshot of pokemon project"></a>
-        <a class="carousel-item" href="npo.html"><img src="images/npodonator.PNG" alt="screenshot of non profit donator project" style="{height: 100%;}"></a>
-        <a class="carousel-item" href="ebird.html"><img src="images/ebird.jpg" alt="screenshot of early bird tee shirt project"></a>
-        <a class="carousel-item" href="style-360.html"><img src="images/style360.png" alt="screenshot of style 360 project"></a>
-     </div>
+        <a class="carousel-item" href="http://gepettomusic.com" target="blank"><img src="https://lorempixel.com/800/400/food/1"></a>
+        <a class="carousel-item" href="https://brendanhannadev.com" target="blank"><img src="https://lorempixel.com/800/400/food/2"></a>
+        <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/800/400/food/3"></a>
+        <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/800/400/food/4"></a>
+      </div>
+
      <!--mobile carousel-->
     </section>
 
