swap out materialize carousel on mobile for simple gallery

--- a/index.html
+++ b/index.html
@@ -49,6 +49,28 @@
     </header>
 
     <section id="work">
+      <!--mobile gallery-->
+      <div id="mobile-gallery">
+        
+        <a href="pokemon.html">
+          <div class="thumbnail" id="pokemon"></div>
+        </a>
+
+        <a href="npo.html">
+          <div class="thumbnail" id="npo"></div>
+        </a>
+
+        <a href="ebird.html">
+          <div class="thumbnail" id="ebird"></div>
+        </a>
+
+        <a href="style-360.html">
+          <div class="thumbnail" id="style360"></div>
+        </a>
+
+      </div>
+
+
       <!--desktop carousel-->
       <div class="carousel carousel-slider" data-indicators="true" id="no-touch-carousel">
         <!-- slide 1 -->
@@ -105,15 +127,6 @@
         <!--/slide 4-->
       </div>
       <!--/desktop carousel-->
-      <!--mobile carousel-->
-      <div class="carousel carousel-slider" data-indicators="true" id="touch-carousel">
-        <a class="carousel-item" href="http://gepettomusic.com" target="blank"><img src="https://lorempixel.com/800/400/food/1"></a>
-        <a class="carousel-item" href="https://brendanhannadev.com" target="blank"><img src="https://lorempixel.com/800/400/food/2"></a>
-        <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/800/400/food/3"></a>
-        <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/800/400/food/4"></a>
-      </div>
-
-     <!--mobile carousel-->
     </section>
 
     <!--about section-->
@@ -149,9 +162,6 @@
     <footer class="light-bg">
       <a href="https://github.com/gepetto503" target="_blank">Github</a>
     </footer>
-
-
-
 
 
     <!--materialize js cdn-->
