--- a/npo.html
+++ b/npo.html
@@ -89,14 +89,16 @@
             </div>
             <!--'content' (screenshots) -->
             <div class="case-study-content">
-              <img src="images/npo-1.PNG" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="images/npo-2.PNG" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="images/npo-3.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-mobile-4.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-mobile-1.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-mobile-2.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-mobile-3.PNG" alt="screenshot of non profit donator project" class="screenshot">
               <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
               </div>
             </div>
+
             <!--content-->
           </div>
           <!--content wrapper-->
