--- a/npo.html
+++ b/npo.html
@@ -21,6 +21,8 @@
     <script type="text/javascript" src="js/scripts.js"></script>
   </head>
   <body>
+    <!--fade-in page, inline script needed to avoid flickering.  adds opacity: 0 class to body, which is removed by first line of JS in scripts.js-->
+    <script>document.body.className += ' fade-out';</script>
     <!-- my navbar -->
     <div class="my-nav">
       <!--top bar-->
@@ -89,10 +91,10 @@
             </div>
             <!--'content' (screenshots) -->
             <div class="case-study-content">
-              <img src="images/npo-mobile-4.PNG" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="images/npo-mobile-1.PNG" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="images/npo-mobile-2.PNG" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="images/npo-mobile-3.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="/images/npo-mobile-4.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="/images/npo-mobile-1.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="/images/npo-mobile-2.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="/images/npo-mobile-3.PNG" alt="screenshot of non profit donator project" class="screenshot">
               <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
