tried adding full path to one img

--- a/npo.html
+++ b/npo.html
@@ -91,7 +91,7 @@
             </div>
             <!--'content' (screenshots) -->
             <div class="case-study-content">
-              <img src="/images/npo-mobile-4.PNG" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="https://github/com/gepetto503/haute-fire-portfolio/tree/gh-pages/images/npo-mobile-4.PNG" alt="screenshot of non profit donator project" class="screenshot">
               <img src="/images/npo-mobile-1.PNG" alt="screenshot of non profit donator project" class="screenshot">
               <img src="/images/npo-mobile-2.PNG" alt="screenshot of non profit donator project" class="screenshot">
               <img src="/images/npo-mobile-3.PNG" alt="screenshot of non profit donator project" class="screenshot">
