--- a/npo.html
+++ b/npo.html
@@ -91,10 +91,10 @@
             </div>
             <!--'content' (screenshots) -->
             <div class="case-study-content">
-              <img src="/images/npo-mobile-4.png" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="/images/npo-mobile-1.png" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="/images/npo-mobile-2.png" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="/images/npo-mobile-3.png" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-mobile-4.png" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-mobile-1.png" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-mobile-2.png" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-mobile-3.png" alt="screenshot of non profit donator project" class="screenshot">
               <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
