clean up npo thumbnails a bit more

--- a/npo.html
+++ b/npo.html
@@ -100,7 +100,7 @@
                 <p>top</p>
               </div>
             </div>
-            <div class="case-study-content display-on-desktop">
+            <div class="case-study-content display-on-tablet">
               <img src="images/npo-1.png" alt="screenshot of non profit donator project" class="screenshot">
               <img src="images/npo-donator.png" alt="screenshot of non profit donator project 2" class="screenshot">
               <img src="images/npo-3.png" alt="screenshot of non profit donator project" class="screenshot">
