add mobile images to style 360 case study

--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
               <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
           </div>
         </div>
-        <!--/slide 1-->
         <!-- slide 2 -->
         <div class="carousel-item" href="#two!" id="style360">
           <a href="style-360.html">
@@ -99,9 +98,18 @@
               <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
           </div>
         </div>
-        <!--/slide 2-->
         <!-- slide 3 -->
-
+        <div class="carousel-item" href="#two!" id="npo">
+          <a href="npo.html">
+            <div class="clear-overlay"></div>
+          </a>
+          <div class="overlay"></div>
+          <div class="slide-wrapper">
+              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
+              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+          </div>
+        </div>
         <!--/slide 3-->
         <!-- slide 4 -->
         <div class="carousel-item" href="#four!" id="ebird">
