--- a/style-360.html
+++ b/style-360.html
@@ -67,17 +67,15 @@
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
                 <p><strong>Company:</strong> SightWorks</p>
-                <p><strong>Project:</strong> Responsive one-page web site for hair stylists</p>
               </div>
               <div class="case-study-bullets-right">
                 <p><strong>Role:</strong> Front-End Web Development</p>
-                <p><strong>Tech:</strong> React JS, SASS, create-react-app (NPM package)</p>
               </div>
             </div>
             <!--/bullets-->
             <div class="case-study-paragraph">
-              <p>SightWorks had an idea for a new product called Style360 and needed the UI prototyped in React.  They had not used React in production before and asked my co-intern and I to a) learn React, b) decide on a development environment and any front-end frameworks and c) build the UI.</p>
-              <p>I took the lead in learning React and brought useful information to the team which directly influenced the direction of the project.</p>
+              <p>As an intern at SightWorks, I helped build the UI for a responsive landing page for hair stylists in need of a web presence.</p>
+              <p>I took the lead in learning React JS and brought useful information to the team on how to implement it.</p>
             </div>
           </div>
         </div>
@@ -89,8 +87,22 @@
                 <div class="scroller"></div>
               </div>
             </div>
-            <!--'content' (screenshots) -->
-            <div class="case-study-content" data-aos="fade-up">
+            <!--content mobile -->
+            <div class="case-study-content display-on-mobile">
+              <div class="screenshots">
+                <img src="images/style360-mobile-1.PNG" alt="screenshot of style360 project" class="screenshot">
+                <img src="images/style360-mobile-2.PNG" alt="screenshot of style360 project" class="screenshot">
+                <img src="images/style360-mobile-3.PNG" alt="screenshot of style360 project" class="screenshot">
+                <img src="images/style360-mobile-4.PNG" alt="screenshot of style360 project" class="screenshot">
+                <img src="images/style360-mobile-5.PNG" alt="screenshot of style360 project" class="screenshot">
+              </div>
+              <div class="to-top-desktop">
+                <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
+                <p>top</p>
+              </div>
+            </div>
+            <!--content tablet and up -->
+            <div class="case-study-content display-on-tablet" data-aos="fade-up">
               <img src="images/style360-1.PNG" alt="screenshot of style360 project" class="screenshot">
               <img src="images/style360-2.PNG" alt="screenshot of style360 project" class="screenshot">
               <img src="images/style360-3.PNG" alt="screenshot of style360 project" class="screenshot">
@@ -101,9 +113,7 @@
                 <p>top</p>
               </div>
             </div>
-            <!--content-->
           </div>
-          <!--content wrapper-->
         </div>
         <div class="to-top-tablet-and-down">
           <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
