fancy up animations

--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@
         <p>Front-End Developer, UI & Graphic Designer</p>
     </header>
 
-    <section id="work" data-aos="fade-right">
+    <section id="work">
       <!--mobile gallery-->
       <div id="mobile-gallery">
         <a href="pokemon.html">
-          <div class="thumbnail" id="pokemon"></div>
+          <div class="thumbnail" id="pokemon"  data-aos="fade-right"></div>
         </a>
         <a href="npo.html">
-          <div class="thumbnail" id="npo"></div>
+          <div class="thumbnail" id="npo" data-aos="fade-left"></div>
         </a>
         <a href="ebird.html">
-          <div class="thumbnail" id="ebird"></div>
+          <div class="thumbnail" id="ebird" data-aos="fade-right"></div>
         </a>
         <a href="style-360.html">
-          <div class="thumbnail" id="style360"></div>
+          <div class="thumbnail" id="style360" data-aos="fade-left"></div>
         </a>
       </div>
       <!-- /mobile gallery -->
 
 
       <!--desktop carousel-->
-      <div class="carousel carousel-slider" data-indicators="true" id="no-touch-carousel">
+      <div class="carousel carousel-slider" data-indicators="true" id="no-touch-carousel"  data-aos="fade-right">
         <!-- slide 1 -->
         <div class="carousel-item" href="#one!" id="pokemon">
           <a href="pokemon.html">
@@ -129,12 +129,12 @@
     </section>
 
     <!--about section-->
-    <section id="about" data-aos="fade-left">
-      <h3>About</h3>
-      <div class="horizontal-line"></div>
+    <section id="about">
+      <h3 data-aos="fade-left">About</h3>
+      <div class="horizontal-line"  data-aos="fade-left"></div>
       <div class="about-content">
-        <img src="images/about-photo.png" alt="portrait of brendan hanna">
-        <div class="about-text">
+        <img src="images/about-photo.png" alt="portrait of brendan hanna"  data-aos="fade-right">
+        <div class="about-text"  data-aos="fade-left">
           <p>I'm a UI designer and front-end dev passionate about combining tech with design, music and social change. Fluent in HTML, CSS and Javascript using tools like Angular, React, Sass/Less, Sketch, Invision, Photoshop & Illustrator.</p>
           <p>I am also a hip hop artist under the name Gepetto.  As a rapper and producer, I've been active in Portland for ten years and put out three studio projects and a bunch of mixtapes and production features. Check my music out <a href="http://gepettomusic.com" target="_blank">here.</a></p>
         </div>
@@ -142,7 +142,7 @@
     </section>
 
     <!-- contact section -->
-    <section class="light-bg" id="contact" data-aos="fade-right">
+    <section class="light-bg" id="contact" data-aos="fade-up">
       <form>
         <h3>Contact</h3>
         <div class="input-field">
