--- a/style-360.html
+++ b/style-360.html
@@ -67,15 +67,20 @@
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
                 <p><strong>Company:</strong> SightWorks</p>
+                <p><strong>Role:</strong> Front-End Web Development</p>
               </div>
               <div class="case-study-bullets-right">
-                <p><strong>Role:</strong> Front-End Web Development</p>
+                <p><strong>Tech:</strong> React JS, SASS, LESS</p>
+                <p><strong>Live Link:</strong>
+                  <a href="https://style.dev.digitalxe.com/site/styleme.style.dev.digitalxe.com/app" target="blank" id="style-link">
+                    (Use style360 for username and password)
+                  </a>
+                </p>
               </div>
             </div>
             <!--/bullets-->
             <div class="case-study-paragraph">
-              <p>As an intern at SightWorks, I helped build the UI for a responsive landing page for hair stylists in need of a web presence.</p>
-              <p>I took the lead in learning React JS and brought useful information to the team on how to implement it.</p>
+              <p>As an intern at SightWorks, I helped build the UI for a responsive landing page for hair stylists in need of a web presence.  I took the lead in learning React JS and brought useful information to the team on how to implement it.</p>
             </div>
           </div>
         </div>
