update copy to shorter versions, commiting to go back to earlier commit and try to figure out why the mouse scroll animation was working before and is not now

--- a/ebird.html
+++ b/ebird.html
@@ -76,8 +76,11 @@
             </div>
             <!--/bullets-->
             <div class="case-study-paragraph">
-              <p>The Early Bird Project is actually my own hip-hop group.  We released our EP on our friend's record label, and I designed the T shirts.  Our friend printed them in the label's studio space.</p>
-
+              <p>The Early Bird Project my hip-hop group.
+                <a href="https://properknocks.bandcamp.com/album/the-early-bird-project" target="blank">We released our EP on our friend's record label,
+                </a>
+                and I designed the T shirts.  Our friend printed them in the label's studio space.
+            </p>
             </div>
           </div>
         </div>
