--- a/npo.html
+++ b/npo.html
@@ -66,24 +66,26 @@
           <div class="case-study-text" data-aos="fade-right">
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
-                <p><strong>Company:</strong> Epicodus Capstone Project</p>
-                <p><strong>Project:</strong> Invision prototype of an app for managing recurring donations.</p>
+                <p><strong>Role:</strong> UX design</p>
+                <p><strong>Tech:</strong> Sketch 3, Invision</p>
               </div>
               <div class="case-study-bullets-right">
-                <p><strong>Role:</strong>UX design</p>
-                <p><strong>Tech:</strong>Sketch 3, Invision</p>
+                <p>
+                  <strong>Live Link:</strong>
+                  <a href="https://invis.io/RED46CZWP" target="_blank">Invision Prototype</a>
+                </p>
               </div>
             </div>
             <!--/bullets-->
             <div class="case-study-paragraph">
               <p>The vision for this app is to have a streamlined experience where the user can easily customize and automate donations to Non Profit Organizations, as well as curate which organizations they see content from.</p>
-              <p>The app will include an interactive map to search NPOs, the ability to invite NPOs to join the platform and thus be able to receive automated donations, and a dashboard where they can manage recurring or one-time donations.  Stretch goals include a social media micro-platform where users can interact with organizations and other users.</p>
+              <!-- <p>The app will include an interactive map to search NPOs, the ability to invite NPOs to join the platform and thus be able to receive automated donations, and a dashboard where they can manage recurring or one-time donations.  Stretch goals include a social media micro-platform where users can interact with organizations and other users.</p> -->
             </div>
           </div>
         </div>
         <div class="case-study-right">
           <!--content wrapper-->
-          <div class="case-study-content-wrapper" data-aos="fade-up">
+          <div class="case-study-content-wrapper" >
             <div class="scroll-downs">
               <div class="mousey">
                 <div class="scroller"></div>
@@ -91,7 +93,7 @@
             </div>
             <!--'content' (screenshots) -->
             <div class="case-study-content display-on-mobile">
-              <img src="images/npo-mobile-4.png" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-mobile-4.png" alt="screenshot of non profit donator project" class="first screenshot">
               <img src="images/npo-mobile-1.png" alt="screenshot of non profit donator project" class="screenshot">
               <img src="images/npo-mobile-2.png" alt="screenshot of non profit donator project" class="screenshot">
               <img src="images/npo-mobile-3.png" alt="screenshot of non profit donator project" class="screenshot">
@@ -101,7 +103,7 @@
               </div>
             </div>
             <div class="case-study-content display-on-tablet">
-              <img src="images/npo-1.png" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-1.png" alt="screenshot of non profit donator project" class="first screenshot">
               <img src="images/npo-donator.png" alt="screenshot of non profit donator project 2" class="screenshot">
               <img src="images/npo-3.png" alt="screenshot of non profit donator project" class="screenshot">
               <div class="to-top-desktop">
