--- a/pokemon.html
+++ b/pokemon.html
@@ -66,18 +66,19 @@
           <div class="case-study-text" data-aos="fade-right">
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
-                <p><strong>Company:</strong> Epicodus Group Project</p>
-                <p><strong>Project:</strong> Javascript-based web-browser video game inspired by the original Pokemon for Gameboy.</p>
+                <p><strong>Role:</strong> Javascript Development</p>
+                <p><strong>Tech:</strong> Vanilla JavaScript</p>
               </div>
               <div class="case-study-bullets-right">
-                <p><strong>Role:</strong>Javascript Development</p>
-                <p><strong>Tech:</strong>Vanilla JavaScript</p>
+                <p>
+                  <strong>Live Link:</strong>
+                  <a href="http://rawgit.com/dlopez6877/pokemon-game/master/index.html" target="_blank">After hitting the power button, it takes 30 seconds to load, just like the original, so be patient!</a>
+                </p>
               </div>
             </div>
             <!--/bullets-->
             <div class="case-study-paragraph">
-              <p>One month into code school, having just been introduced to the basics of JavaScript (and I mean the BASICS), I was tasked with pair-programming Javascript methods that controlled the behavior of Pokemon characters, duking it out in a browser-based homage to the original Pokemon Gameboy game.</p>
-              <p>View the live demo <a href="http://rawgit.com/dlopez6877/pokemon-game/master/index.html" target="_blank">here.</a>  After hitting the power button, it takes 30 seconds to load, just like the original, so be patient! </p>
+              <p>One month into code school, having just been introduced to the basics of JavaScript, I was tasked with pair-programming Javascript methods that controlled the behavior of Pokemon characters in a browser-based homage to the original Pokemon Gameboy game.</p>
             </div>
           </div>
         </div>
