temporarily switch out contact form for simple text telling them to email me

--- a/index.html
+++ b/index.html
@@ -143,8 +143,16 @@
 
     <!-- contact section -->
     <section class="light-bg" id="contact" data-aos="fade-up">
-      <form>
-        <h3>Contact</h3>
+      <h3>Contact</h3>
+      <div class="horizontal-line">
+
+      </div>
+      <div class="contact-text">
+        <p>Drop me a line at brendanhannadev@gmail.com</p>
+        <p>I'm available for full-time or contract work, and if you just want to connect, that's even cooler.</p>
+
+      </div>
+      <!-- <form>
         <div class="input-field">
           <input id="email" type="email" class="validate">
           <label for="email">Email</label>
@@ -154,7 +162,7 @@
           <label for="message">Leave a Mess</label>
         </div>
         <a class="waves-effect waves-light btn-large button">Holler</a>
-      </form>
+      </form> -->
     </section>
 
     <!-- footer-->
