attempt to add formspree form, still has wack default button

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <!-- contact section -->
     <section class="light-bg" id="contact" data-aos="fade-up">
       <h3>Contact</h3>
-      <div class="horizontal-line">
+      <!-- <div class="horizontal-line"> -->
 
       </div>
       <div class="contact-text">
@@ -152,17 +152,19 @@
         <p>I'm available for full-time or contract work, and if you just want to connect, that's even cooler.</p>
 
       </div>
-      <!-- <form>
+      <form action="https://formspree.io/brendanhannadev@gmail.com" method="POST">
         <div class="input-field">
-          <input id="email" type="email" class="validate">
+          <input id="email" type="email" class="validate" name="email">
           <label for="email">Email</label>
         </div>
         <div class="input-field">
-          <textarea id="message" class="materialize-textarea"></textarea>
+          <textarea id="message" class="materialize-textarea" name="message"></textarea>
           <label for="message">Leave a Mess</label>
         </div>
-        <a class="waves-effect waves-light btn-large button">Holler</a>
-      </form> -->
+        <!-- <a class="waves-effect waves-light btn-large button"> -->
+          <input type="submit"  value="HOLLER">
+        <!-- </a> -->
+      </form>
     </section>
 
     <!-- footer-->
