--- a/index.html
+++ b/index.html
@@ -144,10 +144,7 @@
     <!-- contact section -->
     <section class="light-bg" id="contact" data-aos="fade-up">
       <h3>Contact</h3>
-      <!-- <div class="horizontal-line"> -->
-<!-- 
-      </div>
-      <div class="contact-text">
+      <!-- <div class="contact-text">
         <p>Drop me a line at brendanhannadev@gmail.com</p>
         <p>I'm available for full-time or contract work, and if you just want to connect, that's even cooler.</p>
 
@@ -161,9 +158,7 @@
           <textarea id="message" class="materialize-textarea" name="message"></textarea>
           <label for="message">Leave a Mess</label>
         </div>
-        <!-- <a class="waves-effect waves-light btn-large button"> -->
-          <input type="submit"  value="HOLLER">
-        <!-- </a> -->
+        <button type="submit" class="waves-effect waves-light btn-large button">HOLLER</button>
       </form>
     </section>
 
